--- a/CovidXWebApp/appsettings.Development.json
+++ b/CovidXWebApp/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=CovidX_DB;Integrated Security=True;"
   }
 }
