--- a/CovidXWebApp/CovidXWebApp.csproj
+++ b/CovidXWebApp/CovidXWebApp.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\EFCore\EFCore.csproj" />
+    <ProjectReference Include="..\Utility\Utility.csproj" />
   </ItemGroup>
 
 </Project>
